--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keychain": "^8.1.2",
+    "react-native-obfuscating-transformer": "^1.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
