--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.10",
     "eslint-import-resolver-typescript": "^3.6.1",
     "expo": "~49.0.12",
+    "expo-blur": "~12.4.1",
     "expo-checkbox": "~2.4.0",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -26,14 +27,14 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "openai": "^4.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-blur": "~12.4.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
