--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@models/*": ["./models/*"],
       "@components/*": ["./components/*.tsx"],
-      "@homeComponents/*": ["./components/home/*.tsx"]
+      "@homeComponents/*": ["./components/home/*.tsx"],
+      "@helpers/*": ["./helpers/*.ts"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
